--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -3,4 +3,8 @@
     <string name="edittext_name_hint">Название</string>
     <string name="edittext_price_hint">Цена</string>
     <string name="add_button_title">Добавить</string>
+
+    <string name="expence">Расходы</string>
+    <string name="income">Доходы</string>
+
 </resources>
